--- a/Lokaverkefni/Imports/index.html
+++ b/Lokaverkefni/Imports/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Bílavaktin</title>
-	<link rel="stylesheet" type="text/css" href="JS/semantic.min.css">
+	<link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
 	<meta charset="utf-8">
-	<script src="JS/jquery-3.3.1.min.js"></script>
-	<script src="JS/semantic.min.js"></script>
+	<script src="../JS/jquery-3.3.1.min.js"></script>
+	<script src="../JS/semantic.min.js"></script>
 </head>
 </head>
 <body>
-
+	
 </body>
 </html>
