--- a/Lokaverkefni/Imports/index.html
+++ b/Lokaverkefni/Imports/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Bílavaktin</title>
+	<link rel="icon" type="image/png" href="../myndir/bmw.png">
 	<link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
 	<meta charset="utf-8">
 	<script src="../JS/jquery-3.3.1.min.js"></script>
@@ -9,6 +10,6 @@
 </head>
 </head>
 <body>
-	
+
 </body>
 </html>
