Bæti við myndum og linkum á forsíðuna

--- a/Lokaverkefni/Imports/index.html
+++ b/Lokaverkefni/Imports/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Bílavaktin</title>
-	<link rel="icon" type="image/png" href="../myndir/bmw.png">
+	<link rel="icon" type="image/png" href="../myndir/bv.png">
 	<link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
 	<meta charset="utf-8">
 	<script src="../JS/jquery-3.3.1.min.js"></script>
@@ -10,6 +10,19 @@
 </head>
 </head>
 <body>
+	<h1>hæhæ</h1>
+	<img src="../myndir/bv.svg">
+
 
 </body>
+<footer>
+<div class="ui grid centered">
+  <div class="four wide column"><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></div>
+  <div class="four wide column"><div>Logo made with <a href="https://www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div></div>
+
+</div>
+	
+
+	
+</footer>
 </html>
