--- a/Lokaverkefni/Imports/index.html
+++ b/Lokaverkefni/Imports/index.html
@@ -8,16 +8,31 @@
 	<script src="../JS/jquery-3.3.1.min.js"></script>
 	<script src="../JS/semantic.min.js"></script>
 </head>
-</head>
-<body>
-	<h1>hæhæ</h1>
+<body class="">
+	<div class="ui grid centered">
 	<img src="../myndir/bv.svg">
-
+	</div>
+	<div class="ui grid centered">
+	<h1 class="ui huge header">Bílavaktin</h1>
+	</div>
+	<div class="ui inverted segment ">
+  		<div class="ui inverted blue basic button centered"><a href="">Stjórnendur</a></div>
+  		<div class="ui inverted blue basic button"><a href="">Varahlutir</a></div>
+  		<div class="ui inverted blue basic button"><a href="">Bílafréttir</a></div>
+  		<div class="ui inverted blue basic button"><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></div>
+	</div>
+	
+	<div class="ui segment">
+		<p>
+			Velkomin á síðuna Bílavaktin!<br>
+			Hérna er hægt að fylgjast með bílafréttum og varahlutum fyrir bílinn þinn.<br> 
+			Þessi vefsíða er fyrir alla bílaáhugamenn og konur sem hafa gaman af því að lesa um bíla sem aðrir eru að vinna í og hvað er að gerast í bílaheiminum. 
+		</p>
+	</div>
 
 </body>
 <footer>
 <div class="ui grid centered">
-  <div class="four wide column"><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></div>
   <div class="four wide column"><div>Logo made with <a href="https://www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div></div>
 
 </div>
