--- a/Lokaverkefni/Imports/index.html
+++ b/Lokaverkefni/Imports/index.html
@@ -10,33 +10,48 @@
 </head>
 <body class="">
 	<div class="ui grid centered">
-	<img src="../myndir/bv.svg">
+	<img src="../myndir/bv3.svg" height="560"; width="950";>
 	</div>
 	<div class="ui grid centered">
-	<h1 class="ui huge header">Bílavaktin</h1>
+	
 	</div>
-	<div class="ui inverted segment ">
-  		<div class="ui inverted blue basic button centered"><a href="">Stjórnendur</a></div>
-  		<div class="ui inverted blue basic button"><a href="">Varahlutir</a></div>
+	<div class="ui grid centered" style="margin-bottom: 50px;">
+  		<div class="ui inverted blue basic button"><a href="stjorn.html">Stjórnendur</a></div>
+  		<div class="ui inverted blue basic button"><a href="vefverslanir.html">Vefverslanir</a></div>
   		<div class="ui inverted blue basic button"><a href="">Bílafréttir</a></div>
+  		<div class="ui inverted blue basic button"><a href="login.html">Innskráning</a></div>
   		<div class="ui inverted blue basic button"><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></div>
 	</div>
 	
-	<div class="ui segment">
-		<p>
-			Velkomin á síðuna Bílavaktin!<br>
-			Hérna er hægt að fylgjast með bílafréttum og varahlutum fyrir bílinn þinn.<br> 
-			Þessi vefsíða er fyrir alla bílaáhugamenn og konur sem hafa gaman af því að lesa um bíla sem aðrir eru að vinna í og hvað er að gerast í bílaheiminum. 
-		</p>
-	</div>
+	
 
 </body>
 <footer>
-<div class="ui grid centered">
-  <div class="four wide column"><div>Logo made with <a href="https://www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div></div>
 
-</div>
-	
+	<div class="ui inverted vertical footer segment">
+    <div class="ui container">
+      <div class="ui stackable inverted divided equal height stackable grid">
+        <div class="three wide column">
+          <h4 class="ui inverted header">Hjálpir</h4>
+          <div class="ui inverted link list">
+            <div style="border-bottom: grey 1px solid;">Logo made with <a href="https://www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div>
+            <br>
+            <div style="border-bottom: grey 1px solid;">
+
+            	<p>
+            		Bílavaktin er hýst hjá <a href="https://www.digitalocean.com">DigitalOcean Inc</a>
+            	</p>
+            </div>
+          </div>
+        </div>
+        <div class="three wide column" style="padding-bottom: 76px;">
+          <h4 class="ui inverted header">Um Okkur</h4>
+          <p>Hérna er hægt að fylgjast með bílafréttum og  bílaspjalli milli áhugafólks.<br> 
+			Þessi vefsíða er fyrir alla bílaáhugamenn og konur sem hafa gaman af því að lesa um bíla sem aðrir eru að vinna í og hvað er að gerast í bílaheiminum.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 	
 </footer>
