--- a/Lokaverkefni/Imports/index.html
+++ b/Lokaverkefni/Imports/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 	<title>Bílavaktin</title>
-	<link rel="icon" type="image/png" href="../myndir/bv.png">
-	<link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
+	<link rel="icon" type="image/png" href="{{ url_for('static', filename='Myndir/bv.png') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='semantic.min.css') }}">
 	<meta charset="utf-8">
-	<script src="../JS/jquery-3.3.1.min.js"></script>
-	<script src="../JS/semantic.min.js"></script>
+	<script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}"></script>
+	<script src="{{ url_for('static', filename='semantic.min.js') }}"></script>
 </head>
 <body class="">
 	<div class="ui grid centered">
-	<img src="../myndir/bv3.svg" height="560"; width="950";>
+	<img src="{{ url_for('static', filename='Myndir/bv3.svg') }}" height="560"; width="950";>
 	</div>
 	<div class="ui grid centered">
 	
