--- a/Lokaverkefni/Imports/login.html
+++ b/Lokaverkefni/Imports/login.html
@@ -8,11 +8,11 @@
   <title>Innskráning</title>
   <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
-  <link rel="icon" type="image/png" href="../myndir/bv.png">
-  <link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
+  <link rel="icon" type="image/png" href="../static/myndir/bv.png">
+  <link rel="stylesheet" type="text/css" href="../static/semantic.min.css">
   <meta charset="utf-8">
-  <script src="../JS/jquery-3.3.1.min.js"></script>
-  <script src="../JS/semantic.min.js"></script>
+  <script src="../static/jquery-3.3.1.min.js"></script>
+  <script src="../static/semantic.min.js"></script>
   <link rel="stylesheet" type="text/css" href="../dist/components/container.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/grid.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/header.css">
