--- a/Lokaverkefni/Imports/stjorn.html
+++ b/Lokaverkefni/Imports/stjorn.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 	<title>Bílavaktin</title>
-  <link rel="icon" type="image/png" href="../myndir/bv.png">
-	<link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
+  <link rel="icon" type="image/png" href="../static/myndir/bv.png">
+  <link rel="stylesheet" type="text/css" href="../static/semantic.min.css">
   <meta charset="utf-8">
-  <script src="../JS/jquery-3.3.1.min.js"></script>
-  <script src="../JS/semantic.min.js"></script>
+  <script src="../static/jquery-3.3.1.min.js"></script>
+  <script src="../static/semantic.min.js"></script>
 </head>
 <body>
 <div class="ui inverted vertical masthead center aligned segment" style="padding-bottom: 90px;">
   <div class="ui container">
     <div class="ui large secondary inverted pointing menu">
     <div class="item"><h3><a href="index.html">Forsíða</a></h3></div>
-    <div class="item"><h3><a href="vefverslanir.html">Vefverlsanir</a></h3></div>
-    <div class="item"><h3><a href="">Bílafréttir</a></h3></div>
+    <div class="item"><h3><a href="vefverslanir.html">Vefverslanir</a></h3></div>
+    <div class="item"><h3><a href="blog.html">Bílafréttir</a></h3></div>
     <div class="item"><h3><a href="login.html">Innskráning</a></h3></div>
     <div class="item"><h3><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></h3></div>
   </div>
@@ -31,7 +31,7 @@
 
     <div class="column">
   	<div class="ui medium image "   style="margin-left: 300px;">
-  	<img class="mark" src="../Myndir/jonas.jpg">
+  	<img class="mark" src="../static/Myndir/jonas.jpg">
     <h1>Jónas Freyr Bjarnason</h1>
   	</div>
   	
@@ -41,7 +41,7 @@
 
     <div class="column">
   	<div class="ui medium image"    style="margin-left: 200px;">
-  	<img class="harrison" src="../Myndir/alexander.jpg" height="197";>
+  	<img class="harrison" src="../static/Myndir/alexander.jpg" height="197";>
     <h1>Alexander Kári Ragnarsson</h1>
   	</div>
   </div>
@@ -52,7 +52,7 @@
   <div class="header">Jónas Freyr Bjarnason</div>
   <div class="image content">
   	<div class ="ui medium image">
-    <img class="image" src="../Myndir/jonas.jpg">
+    <img class="image" src="../static/Myndir/jonas.jpg">
     </div>
     <div class="description">
       <p>Jónas Freyr er 18 ára, hann er á Tölvubraut í Tækniskólanum í Reykjavík. Helstu áhugamálin hans eru að forrita, hanna vefsíður, flest sem tengist tölvum og bílar. Það sem honum finnst skemmtilegast að gera er að forrita í frítíma sínum.</p>
@@ -64,7 +64,7 @@
   <div class="header">Alexander Kári Ragnarsson</div>
   <div class="image content">
   	<div class ="ui medium image">
-    <img class="image" src="../Myndir/alexander.jpg">
+    <img class="image" src="../static/Myndir/alexander.jpg">
     </div>
     <div class="description">
       <p>Alexander Kári er 18 ára, hann er á Tölvubraut í Tækniskólanum í Reykjavík. Helstu áhugamálin hans eru bílar, hanna vefsíður og tölvur. Það sem honum finnst skemmtilegast að gera er að laga og vinna í bílum á kvöldin með vinum og með einn kaldan í höndinni. </p>
