--- a/Lokaverkefni/Imports/nyskraning.html
+++ b/Lokaverkefni/Imports/nyskraning.html
@@ -8,119 +8,47 @@
   <title>Nýskráning</title>
   <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
   <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
-  <link rel="icon" type="image/png" href="../myndir/bv.png">
-  <link rel="stylesheet" type="text/css" href="../JS/semantic.min.css">
+  <link rel="icon" type="image/png" href="../static/myndir/bv.png">
+  <link rel="stylesheet" type="text/css" href="../static/semantic.min.css">
   <meta charset="utf-8">
-  <script src="../JS/jquery-3.3.1.min.js"></script>
-  <script src="../JS/semantic.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/menu.css">
-
-  <link rel="stylesheet" type="text/css" href="../dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/form.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/input.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/button.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/message.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
-
-  <script src="assets/library/jquery.min.js"></script>
-  <script src="../dist/components/form.js"></script>
-  <script src="../dist/components/transition.js"></script>
-
-  <style type="text/css">
-    body {
-      background-color: #DADADA;
-    }
-    body > .grid {
-      height: 100%;
-    }
-    .image {
-      margin-top: -100px;
-    }
-    .column {
-      max-width: 450px;
-    }
-  </style>
-  <script>
-  $(document)
-    .ready(function() {
-      $('.ui.form')
-        .form({
-          fields: {
-            email: {
-              identifier  : 'email',
-              rules: [
-                {
-                  type   : 'empty',
-                  prompt : 'Please enter your e-mail'
-                },
-                {
-                  type   : 'email',
-                  prompt : 'Please enter a valid e-mail'
-                }
-              ]
-            },
-            password: {
-              identifier  : 'password',
-              rules: [
-                {
-                  type   : 'empty',
-                  prompt : 'Please enter your password'
-                },
-                {
-                  type   : 'length[6]',
-                  prompt : 'Your password must be at least 6 characters'
-                }
-              ]
-            }
-          }
-        })
-      ;
-    })
-  ;
-  </script>
+  <script src="../static/jquery-3.3.1.min.js"></script>
+  <script src="../static/semantic.min.js"></script>
 </head>
 <body>
-
-<div class="ui middle aligned center aligned grid">
-  <div class="column">
-    <h2 class="ui black image header">
-      <img src="../myndir/bv3.svg" class="image">
-      <div class="content">
-        Nýskráning
-      </div>
-    </h2>
-    <form class="ui large form">
-      <div class="ui stacked segment">
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <input type="text" name="email" placeholder="E-mail address">
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="lock icon"></i>
-            <input type="password" name="password" placeholder="Password">
-          </div>
-        </div>
-        <div class="ui fluid large black submit button">Login</div>
-      </div>
-
-      <div class="ui error message"></div>
-
-    </form>
-
-    <div class="ui message">
-      Tilbaka <a href="index.html">Forsíða</a>
-    </div>
+  <div class="ui inverted vertical masthead center aligned segment" style="padding-bottom: 90px;">
+  <div class="ui container">
+    <div class="ui large secondary inverted pointing menu">
+    <div class="item"><h3><a href="index.html">Forsíða</a></h3></div>
+    <div class="item"><h3><a href="vefverslanir.html">Vefverslanir</a></h3></div>
+    <div class="item"><h3><a href="blog.html">Bílafréttir</a></h3></div>
+    <div class="item"><h3><a href="login.html">Innskráning</a></h3></div>
+    <div class="item"><h3><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></h3></div>
   </div>
 </div>
+</div>
+
+  <form class="ui form ">
+  <div class="field ">
+    <label>First Name</label>
+    <input type="text" name="first-name" placeholder="First Name">
+  </div>
+  <div class="field">
+    <label>Last Name</label>
+    <input type="text" name="last-name" placeholder="Last Name">
+  </div>
+  </div>
+  <div class="field">
+    <label>Password</label>
+    <input type="password" name="password" placeholder="password">
+  </div>
+  <div class="field">
+    <div class="ui checkbox">
+      <input type="checkbox" tabindex="0" class="hidden">
+      <label>I agree to the Terms and Conditions</label>
+    </div>
+  </div>
+  <button class="ui button" type="submit">Submit</button>
+</form>
 
 
 
