Læt inn html síður sem eg breytti

--- a/Lokaverkefni/Imports/blog.html
+++ b/Lokaverkefni/Imports/blog.html
@@ -26,7 +26,17 @@
 
 
 <div class="text">
-  
+  <h1>EcoSport: lip­ur smájeppi frá Ford</h1>
+  Kom­in er fram á sjón­ar­sviðið ný kyn­slóð smájepp­ans EcoSport frá Ford  og fell­ur hann í flokk ein­hvers staðar á milli fólks­bíls og jepp­lings;<br> yf­ir­bygg­ing­in er nett enda bíll­inn á sömu grind og Ford Fiesta, en um leið er veg­hæðin feiki­leg, svo vel hæf­ir jeppa.<br>
+<br>
+Það er göm­ul saga og ný að bíla­fram­leiðend­ur bjóða ekki bara upp á stall­bak, hlaðbak, skut­bíl og jeppa í vöru­vali sínu held­ur tugi mis­mun­andi teg­unda af<br> bíl­um, allt frá smæstu smá­bíl­um til vold­ug­ustu jeppa. Ford eru þar ekki eft­ir­bát­ar annarra og sé heimasíða Ford á Íslandi skoðuð sést glöggt hve marg­ir bíl­ar<br> eru í raun og veru í boði. Nú hef­ur þar bæst við ný kyn­slóð af smájepp­an­um EcoSport, og fell­ur hann í flokk ein­hvers staðar á milli fólks­bíls og jepp­lings;<br> yf­ir­bygg­ing­in er nett (EcoSport er um 50 cm styttri en Kuga stóra syst­ir) enda bíll­inn á sömu grind og Ford Fiesta, en um leið er veg­hæðin feiki­leg, svo vel<br> hæf­ir jeppa.<br>
+<br>
+<br>
+Ekki leitað langt yfir skammt<br>
+<br>
+Þegar hönn­un EcoSport er skoðuð til­sýnd­ar blas­ir við að hönn­un­ar­deild­in hjá Ford hef­ur afráðið að sækja ekki vatnið yfir læk­inn því bíll­inn sver sig <br>ræki­lega í ætt­ina. Svip­ur­inn er sá sami og á jepp­un­um Kuga og Edge og væri þeim þrem­ur stillt upp hlið við hlið líkt­ust þeir sjálfsagt einna helst rúss­nesk­um <br>matryos­hka-dúkk­um, slík eru lík­ind­in. Það er gott og blessað út af fyr­ir sig; und­ir­rituðum hef­ur alltaf þótt lagið fara smærri jepp­um Ford bet­ur, Kuga er <br>til að mynda að mínu mati fal­legri en Edge, og þar af leiðir að EcoSport er í lag­legri kant­in­um. Hönn­un­in er eng­in bylt­ing en bíll­inn býður af sér þokka <br>þess sem er ramm­gert, þétt og traust­verkj­andi.<br>
+Þetta á einkum við fram­end­ann, ásjónu bíls­ins, þar sem fáu er yfir að kvarta nema kannski hversu lygn­an sjó hönn­un­ar­deild­in hef­ur ákveðið að sigla. Þessi<br> stærðarflokk­ur bíla er sneisa­full­ur af áhuga­verðum kost­um um þess­ar mund­ir og gerj­un­in hreint svaka­leg, svo ef til vill hefði borgað sig að spila aðeins <br>djarf­ar? Allt um það, aft­ur­end­inn er á sömu bók­ina lærður og lum­ar reynd­ar á skemmti­legri gestaþraut sem kalla mætti „finndu út hvernig á að opna <br>aft­ur­hler­ann“. Það tók blaðamann smá stund af glápi og heila­brot­um en loks hafðist það; húnn­inn er ræki­lega dul­bú­inn sem hluti af hægra aft­ur­ljósi og er það<br> býsna hag­an­lega gert. Þegar aft­ur­hler­inn er loks opnaður blas­ir við far­ang­urs­rými með hörkufínni opn­un.<br>
+
 </div>
 
 
