--- a/Lokaverkefni/Imports/blog.html
+++ b/Lokaverkefni/Imports/blog.html
@@ -117,12 +117,22 @@ Ekki leitað langt yfir skammt<br>
       </div>
     </div>
   </div>
-  <form class="ui reply form ">
+  <br>
+  <form action="" method="Post">
+    <!--<label> Comment: <br>
+      <textarea name="Comment" style="width: 300px" required>
+      </textarea>
+      
+    </label>
+    <br>
+    <input type="submit" name="Submit" value="Submit comment">-->
+
+
     <div class="field">
       <textarea></textarea>
     </div>
-    <div class="ui blue labeled submit icon button">
-      <i class="icon edit "></i> Add Reply
+    <div >
+      <input type="submit" name="Submit" value="Submit comment">
     </div>
   </form>
 </div>
