Geri stórbreytingar á blog síðunni og bæti inn frétt

--- a/Lokaverkefni/Imports/blog.html
+++ b/Lokaverkefni/Imports/blog.html
@@ -19,125 +19,109 @@
     <div class="item"><h3><a href="https://github.com/jonasfreyr/Lokaverkefni-Vefforritun2018/tree/master/Lokaverkefni">Github</a></h3></div>
   </div>
   <div class="ui text container">
-      <h1 class="ui inverted header" style="margin-top: 30px; margin-bottom: 20px;">Spjall</h1>
+      <h1 class="ui inverted header" style="margin-top: 30px; margin-bottom: 20px;">Bílafréttir</h1>
   </div>
 </div>
 </div>
 
 
-<div class="text">
-  <h1>EcoSport: lip­ur smájeppi frá Ford</h1>
-  Kom­in er fram á sjón­ar­sviðið ný kyn­slóð smájepp­ans EcoSport frá Ford  og fell­ur hann í flokk ein­hvers staðar á milli fólks­bíls og jepp­lings;<br> yf­ir­bygg­ing­in er nett enda bíll­inn á sömu grind og Ford Fiesta, en um leið er veg­hæðin feiki­leg, svo vel hæf­ir jeppa.<br>
-<br>
-Það er göm­ul saga og ný að bíla­fram­leiðend­ur bjóða ekki bara upp á stall­bak, hlaðbak, skut­bíl og jeppa í vöru­vali sínu held­ur tugi mis­mun­andi teg­unda af<br> bíl­um, allt frá smæstu smá­bíl­um til vold­ug­ustu jeppa. Ford eru þar ekki eft­ir­bát­ar annarra og sé heimasíða Ford á Íslandi skoðuð sést glöggt hve marg­ir bíl­ar<br> eru í raun og veru í boði. Nú hef­ur þar bæst við ný kyn­slóð af smájepp­an­um EcoSport, og fell­ur hann í flokk ein­hvers staðar á milli fólks­bíls og jepp­lings;<br> yf­ir­bygg­ing­in er nett (EcoSport er um 50 cm styttri en Kuga stóra syst­ir) enda bíll­inn á sömu grind og Ford Fiesta, en um leið er veg­hæðin feiki­leg, svo vel<br> hæf­ir jeppa.<br>
-<br>
-<br>
-Ekki leitað langt yfir skammt<br>
-<br>
-Þegar hönn­un EcoSport er skoðuð til­sýnd­ar blas­ir við að hönn­un­ar­deild­in hjá Ford hef­ur afráðið að sækja ekki vatnið yfir læk­inn því bíll­inn sver sig <br>ræki­lega í ætt­ina. Svip­ur­inn er sá sami og á jepp­un­um Kuga og Edge og væri þeim þrem­ur stillt upp hlið við hlið líkt­ust þeir sjálfsagt einna helst rúss­nesk­um <br>matryos­hka-dúkk­um, slík eru lík­ind­in. Það er gott og blessað út af fyr­ir sig; und­ir­rituðum hef­ur alltaf þótt lagið fara smærri jepp­um Ford bet­ur, Kuga er <br>til að mynda að mínu mati fal­legri en Edge, og þar af leiðir að EcoSport er í lag­legri kant­in­um. Hönn­un­in er eng­in bylt­ing en bíll­inn býður af sér þokka <br>þess sem er ramm­gert, þétt og traust­verkj­andi.<br>
-Þetta á einkum við fram­end­ann, ásjónu bíls­ins, þar sem fáu er yfir að kvarta nema kannski hversu lygn­an sjó hönn­un­ar­deild­in hef­ur ákveðið að sigla. Þessi<br> stærðarflokk­ur bíla er sneisa­full­ur af áhuga­verðum kost­um um þess­ar mund­ir og gerj­un­in hreint svaka­leg, svo ef til vill hefði borgað sig að spila aðeins <br>djarf­ar? Allt um það, aft­ur­end­inn er á sömu bók­ina lærður og lum­ar reynd­ar á skemmti­legri gestaþraut sem kalla mætti „finndu út hvernig á að opna <br>aft­ur­hler­ann“. Það tók blaðamann smá stund af glápi og heila­brot­um en loks hafðist það; húnn­inn er ræki­lega dul­bú­inn sem hluti af hægra aft­ur­ljósi og er það<br> býsna hag­an­lega gert. Þegar aft­ur­hler­inn er loks opnaður blas­ir við far­ang­urs­rými með hörkufínni opn­un.<br>
-
-</div>
-
-
-
-
-
-
-
-<div class="ui comments">
-  <h3 class="ui dividing header">Comments</h3>
-  <div class="comment">
-    <a class="avatar">
-      <img src="/images/avatar/small/matt.jpg">
-    </a>
-    <div class="content">
-      <a class="author">Matt</a>
-      <div class="metadata">
-        <span class="date">Today at 5:42PM</span>
-      </div>
-      <div class="text">
-        How artistic!
-      </div>
-      <div class="actions">
-        <a class="reply">Reply</a>
-      </div>
-    </div>
-  </div>
-  <div class="comment">
-    <a class="avatar">
-      <img src="/images/avatar/small/elliot.jpg">
-    </a>
-    <div class="content">
-      <a class="author">Elliot Fu</a>
-      <div class="metadata">
-        <span class="date">Yesterday at 12:30AM</span>
-      </div>
-      <div class="text">
-        <p>This has been very useful for my research. Thanks as well!</p>
-      </div>
-      <div class="actions">
-        <a class="reply">Reply</a>
-      </div>
-    </div>
-    <div class="comments">
-      <div class="comment">
-        <a class="avatar">
-          <img src="/images/avatar/small/jenny.jpg">
-        </a>
-        <div class="content">
-          <a class="author">Jenny Hess</a>
-          <div class="metadata">
-            <span class="date">Just now</span>
-          </div>
-          <div class="text">
-            Elliot you are always so right :)
-          </div>
-          <div class="actions">
-            <a class="reply">Reply</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="comment">
-    <a class="avatar">
-      <img src="/images/avatar/small/joe.jpg">
-    </a>
-    <div class="content">
-      <a class="author">Joe Henderson</a>
-      <div class="metadata">
-        <span class="date">5 days ago</span>
-      </div>
-      <div class="text">
-        Dude, this is awesome. Thanks so much
-      </div>
-      <div class="actions">
-        <a class="reply">Reply</a>
-      </div>
-    </div>
-  </div>
+<div class="ui four grid centered" style="margin-top: 30px;">
+  <div class="ui four centered grid">
+  <div class="four wide column "><h1 class="ui dividing header">Torfærukeppni á Hellu</h1><br>
   <br>
-  <form action="" method="Post">
-    <!--<label> Comment: <br>
-      <textarea name="Comment" style="width: 300px" required>
-      </textarea>
-      
-    </label>
-    <br>
-    <input type="submit" name="Submit" value="Submit comment">-->
+  12.Maí fór fram fyrsta umferð íslandsmótsinns í Torfæru 2018, Sindratorfæran á Hellu. <br>
+  Það var mikið um dýrðir og ekki vantaði uppá sýninguna hjá ökumönnunum. Brautirnar framanaf voru eknar með miklum tilþrifum, stökkum og veltum við mikinn<br> fögnuð þeirra 5000 áhorfenda sem lögðu leið sína á svæðið. <br>
+  Á eftir komu hraðari brautir sem reyndu gríðarlega á bíla og menn sem endaði með fleytingum og mýrarakstri með frábærri skemmtun.<br>
+  <br></div>
+
+  <div class="four wide column"><p><iframe width="500" height="281" src="https://www.youtube.com/embed/SKawz5cNDxc?feature=oembed" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></p></div>
+
+  <div class=""><img src="../static/Myndir/tor1.jpg">
+  <img src="../static/Myndir/tor2.jpg">
+  <img src="../static/Myndir/tor3.jpg">
+  <img src="../static/Myndir/tor4.jpg">
+  <img src="../static/Myndir/tor5.jpg">
+  <img src="../static/Myndir/tor6.jpg">
+  <img src="../static/Myndir/tor7.jpg">
+  <img src="../static/Myndir/tor8.jpg">
+  <img src="../static/Myndir/tor9.jpg">
+  <img src="../static/Myndir/tor10.jpg">
+  <img src="../static/Myndir/tor11.jpg">
+  <img src="../static/Myndir/tor12.jpg">
+  <img src="../static/Myndir/tor13.jpg"></div>
+
+  <div class="fourfourfour wide column"></div>
+</div>
 
 
+
+<div class="ui five centered grid">
+  <div class="three wide column">
+    <p>Í fyrsta sæti í götubílum varð loksins Eðvald Orri Guðmundsson á Pjakknum,  hlaut hann veglegan bikar auk 100.000 kr inneignar hjá Sindra.<br>
+      <br>
+      Í öðru sæti fyrrum íslandsmeistarinn Ívar Guðmundsson á Kölska og í þriðja sæti Haukur Birgisson á Þeytingi. Tilþrifaverðlaunin komu svo í hlut<br> Steingríms Bjarnasonar á Strumpnum, en hann sýndi mikil tilþrif í flestum brautum dagsinns.<br></p>
+  </div>
+  <div class="three wide column">
+    <p>Í sérútbúna flokknum var það Þór Þormar Pálsson á Thor sem stóð uppi sem sigurvegari. Má segja að hann hafi komið séð og sigrað, því hann hlaut einnig <br>tilþrifaverðlaun fyrir það þegar hann sló heimsmetið í vatnafleytingum og ók á 102 km/klst á ánni og sló þar með 4 ára gamalt met Guðbjörns Grímssonar á Kötlu <br>Turbo.<br>
+<br></p>
+  </div>
+  <div class="three wide column">
+    <p>Þór var ekki hættur heldur uppskar flest stig eftir daginn og vann þar með Helluna sem er farandbikar af sverustu gerð og heldur honum til eignar í 1 ár. Þór <br>hafði verið í harðri baráttu við Atla Jamil á Thunderbolt en Atli missteig sig örlítið í vatnaakstrinum sem kostaði hann dýrmæt stig.<br>
+   Í öðru sæti var það svo Ingólfur Guðvarðarson sem loksins tókst að klára allar brautir á Hellu og uppskar eftir því.<br>
+   Þriðja sætið kom í hlut Geirs Everts Grímssonar sem sýndi flotta takta og kláraði ánna í fyrsta skipti eftir fjölmörg döpur ár þar á undan.<br>
+   Aukaverðlaun dagsins voru svo veitt Gesti J. Ingólfssyni fyrir að tvíhjóla í ánni en fleyta samt alla leið.<br>
+    Hreint út sagt frábær keppni hjá Flugbjörgunarsveitinni á Hellu og Akstursíþróttanefnd umf. Heklu þar sem allt gekk upp.<br></p>
+  </div>
+</div>
+
+</div>
+
+
+
+
+<div class="ui comments centered">
+  <h3 class="ui dividing header">Comments</h3>
     <div class="field">
       <textarea></textarea>
     </div>
-    <div >
+    <div class="ui" >
       <input type="submit" name="Submit" value="Submit comment">
     </div>
   </form>
 </div>
 
-
+</div>
 
 </body>
+
+  <footer>
+
+  <div class="ui inverted vertical footer segment">
+    <div class="ui container">
+      <div class="ui stackable inverted divided equal height stackable grid">
+        <div class="three wide column">
+          <h4 class="ui inverted header">Hjálpir</h4>
+          <div class="ui inverted link list">
+            <div style="border-bottom: grey 1px solid;">Logo made with <a href="https://www.designevo.com/" title="Free Online Logo Maker">DesignEvo</a></div>
+            <br>
+            <div style="border-bottom: grey 1px solid;">
+
+              <p>
+                Bílavaktin er hýst hjá <a href="https://www.digitalocean.com">DigitalOcean Inc</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="three wide column" style="padding-bottom: 76px;">
+          <h4 class="ui inverted header">Um Okkur</h4>
+          <p>Hérna er hægt að fylgjast með bílafréttum og  bílaspjalli milli áhugafólks.<br> 
+      Þessi vefsíða er fyrir alla bílaáhugamenn og konur sem hafa gaman af því að lesa um bíla sem aðrir eru að vinna í og hvað er að gerast í bílaheiminum.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+</footer>
+
 </html>
